refactor: rename app to module
- Rename *_APP_* to *_MODULE_* in .env and config
- Add AppName and AppVersion to build package as project metadata
- Move AppLogoASCII to build package
- Update home_message template in i18n files (en, id, ja)
- Refactor config loading logic to use new Module naming
