# app/rest/docs/rest_swagger.json
@@ -1281,6 +1281,9 @@
                 "lang": {
                     "$ref": "#/definitions/response.AppLang"
                 },
+                "module": {
+                    "$ref": "#/definitions/response.Module"
+                },
                 "version": {
                     "type": "string",
                     "example": "Version 0.1"
@@ -1397,6 +1400,23 @@
                 "id": {
                     "type": "integer",
                     "example": 123
+                }
+            }
+        },
+        "response.Module": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "REST Service"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "REST"
+                },
+                "version": {
+                    "type": "string",
+                    "example": "0.1"
                 }
             }
         },
